--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -29,9 +29,12 @@
   {% if author.soundcloud %}<a href="http://soundcloud.com/{{ author.soundcloud }}" class="author-social" target="_blank"><i class="fa fa-fw fa-soundcloud"></i> Soundcloud</a>{% endif %}
   {% if author.weibo %}<a href="http://www.weibo.com/{{ author.weibo }}" class="author-social" target="_blank"><i class="fa fa-fw fa-weibo"></i> Weibo</a>{% endif %}
 
-  <!-- Mailing address -->
+  <!-- Mailing address 
   <br><h4>Mailing address</h4>Institute for Logic, Language and Computation<br>Universiteit van Amsterdam<br>P.O. Box 94242<br> 1090 GE AMSTERDAM<br>
+  -->
 
   <!-- Mailing address -->
   <br><h4>Visiting address</h4>Room F2.26<br>Building F<br>Science Park 107<br>1098 XG Amsterdam
+
+  <br><h4><u><a href="DHupkes_CV.pdf"><font color="brown">Curriculum Vitae</font></a></u></h4><br>
 </div>
