Open cv in new page

--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -36,5 +36,5 @@
   <!-- Mailing address -->
   <br><h4>Visiting address</h4>Room F2.26<br>Building F<br>Science Park 107<br>1098 XG Amsterdam
 
-  <br><h4><u><a href="{{ site.url }}/DHupkes_CV.pdf"><font color="brown">Curriculum Vitae</font></a></u></h4><br>
+  <br><h4><u><a href="{{ site.url }}/DHupkes_CV.pdf"><font color="brown" target="_blank">Curriculum Vitae</font></a></u></h4><br>
 </div>
