--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -25,7 +25,7 @@
   -->
 
   <!-- Mailing address -->
-  <br><h4>Visiting address</h4>Room F2.26<br>Building F<br>Science Park 107<br>1098 XG Amsterdam
+  <br><h4>Visiting address</h4>Room F3.260<br>Science Park 904<br>1098 XH Amsterdam
 
   <br><h4><u><a href="{{ site.url }}/DHupkes_CV.pdf"><font color="brown" target="_blank">Curriculum Vitae</font></a></u></h4><br>
 </div>
